Add swagger for CreateTask and GetTasks
