# internal/handlers/swagger_models.go
@@ -12,3 +12,9 @@ type SuccessResponse struct {
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
+
+type TaskData struct {
+	Title       string `db:"title" json:"title"`
+	Description string `db:"description" json:"description"`
+	Status      string `db:"status" json:"status"`
+}
