# internal/handlers/task_handlers.go
@@ -19,27 +19,49 @@ func NewTaskHandler(taskService *services.TaskService) *TaskHandler {
 	return &TaskHandler{service: taskService}
 }
 
+// @Summary CreateTask
+// @Description create new task
+// @Security Auth
+// @Accept  json
+// @Produce  json
+// @Tags tasks
+// @Param input body TaskData true "user info"
+// @Success 201 {object} models.Task
+// @Failure 400 {object} ErrorResponse
+// @Failure 401
+// @Failure 500 {object} ErrorResponse
+// @Router /tasks/ [post]
 func (h *TaskHandler) CreateTask(c *gin.Context) {
 	var task models.Task
 	if err := c.ShouldBindJSON(&task); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
 		return
 	}
 
 	task.UserID = c.GetInt("user_id")
 	if err := h.service.CreateTask(&task); err != nil {
-		c.Status(http.StatusInternalServerError)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "server side error"})
 		return
 	}
 
 	c.JSON(http.StatusCreated, task)
 }
 
+// @Summary GetTasks
+// @Description get all user tasks
+// @Security Auth
+// @Accept  json
+// @Produce  json
+// @Tags tasks
+// @Success 200 {object} []models.Task
+// @Failure 401
+// @Failure 500 {object} ErrorResponse
+// @Router /tasks/ [get]
 func (h *TaskHandler) GetTasks(c *gin.Context) {
 	userID := c.GetInt("user_id")
 	tasks, err := h.service.GetTasksByUser(userID)
 	if err != nil {
-		c.Status(http.StatusInternalServerError)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "server side error"})
 		return
 	}
 
